--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         </div>
                         <div class="contact-form__privacy-button">
                             <div class="contact-form__privacy _white">
-                                <input checked type="checkbox" name="privacy" value="OK" tabindex="4" required/>  Даю согласие на обработку персональных данных
+                                <input type="checkbox" name="privacy" value="OK" tabindex="4" required/><p> Даю согласие на обработку персональных данных</p>
                             </div>
                             <button class="button button_peach" type="submit" tabindex="5">Отправить</button>
                         </div>
