switched into grid layout

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="wrapper">
 
         <header class="header">
-            <div class="header__container _container">
-                <div class="header__body">
+            <div class="header__container">
+
                     <a href class="header__logo">
                         <img src="assets/img/logos/logo80.png" alt="Zooov company logo">
                     </a>
@@ -38,19 +38,17 @@
                             <a href class="button button_red">Выбрать рацион</a>
                         </div>
                     </nav>
-                </div>
+
             </div>
         </header>
 
         <main class="main">
             <div class="intro">
-                <div class="intro__container _container">
-                    <div class="intro__body">
-                        <h1 class="intro__title">Питание, которое полюбит ваш хвостик</h1>
-                        <div class="intro__text">Натуральные рационы питания для собак по системе BARF</div>
-                        <div class="intro__button">
-                            <a href class="button button_red">Выбрать рацион</a>
-                        </div>
+                <div class="intro__body">
+                    <h1 class="intro__title">Питание, которое полюбит ваш хвостик</h1>
+                    <div class="intro__text">Натуральные рационы питания для собак по системе BARF</div>
+                    <div class="intro__button">
+                        <a href class="button button_red">Выбрать рацион</a>
                     </div>
                 </div>
                 <div class="intro__image _ibg">
@@ -61,7 +59,7 @@
                 </div>
             </div>
 
-            <div class="barf _container">
+            <div class="barf">
                 <div class="barf__content">
                     <h2 class="barf__subtitle subtitle">Что такое BARF</h2>
                     <p class="barf__text text">BARF (Biologically Appropriate Raw Food) — система питания собак, основанная на сырых натуральных продуктах. Такой рацион максимально приближен к естественному пищевому поведению хищников, а значит биологически правилен. </p>
@@ -79,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="diet-compo _container">
+            <div class="diet-compo">
                 <div class="diet-compo__content">
                     <div class="diet-compo__adult-dogs diet-compo__section">
                         <h3 class="diet-compo__minisubtitle minisubtitle">Для взрослых</h3>
@@ -112,7 +110,7 @@
                 </div>
             </div>
 
-            <div class="diets _container">
+            <div class="diets">
                 <h2 class="diets__subtitle subtitle">Рационы ZOOOV</h2>
                 <div class="diets__text text _black">Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
                     по составу рационы ZOOOV. Вы сможете заказать полноценное питание исходя из возраста, веса и даже вкусовых предпочтений вашего друга. ZOOOV  заботится о каждой собаке.</div>
@@ -160,7 +158,7 @@
                 </div>
             </div>
 
-            <div class="diet-calc _container">
+            <div class="diet-calc">
                 <div class="diet-calc__content">
                     <div class="diet-compo__text">
                         <p>Рассчитаем в каком количестве нужно кормить вашего хвостика рационами Zooov</p>
@@ -171,7 +169,7 @@
                 </div>
             </div>
 
-            <div class="why-zooov _container">
+            <div class="why-zooov">
                 <h2 class="why-zooov__subtitle subtitle">Почему ZOOOV</h2>
                 <div class="why-zooov__items">
                     <div class="why-zooov__item">
@@ -226,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="delivery _container">
+            <div class="delivery">
                 <h2 class="delivery__subtitle subtitle">Как получить ZOOOV?</h2>
                 <div class="delivery__items">
                     <div class="delivery__item">
@@ -254,8 +252,8 @@
                 </div>
             </div>
 
-            <div class="faq _container">
-                <h2 class="faq_subtitle subtitle">Частые вопросы</h2>
+            <div class="faq">
+                <h2 class="faq__subtitle subtitle">Частые вопросы</h2>
                 <div class="faq__spoiler">
                     <div class="spoiler__one">
                         <h3 class="spoiler__minisubtitle minisubtitle">Не опасны ли бактерии, которые находятся в сыром мясе?</h3>
