added slider to diets, adaptive for diets

--- a/index.html
+++ b/index.html
@@ -138,41 +138,83 @@
                 <div class="diets__items">
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/adults-1.jpg"></div>
-                        <h3 class="diets_destination minisubtitle">Для взрослых собак </h3>
+                        <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
                         <div class="diets__compo">Индейка/Говядина</div>
                         <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
-                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
-                        <div class="diets_button">
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
                             <a href="" class="button_color-white button">Заказать</a>
                         </div>
                     </div>
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/puppets-2.jpg"></div>
-                        <h3 class="diets_destination minisubtitle">Для щенков </h3>
+                        <h3 class="diets__for minisubtitle">Для щенков </h3>
                         <div class="diets__compo">Индейка/Говядина</div>
                         <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
-                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
-                        <div class="diets_button">
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
                             <a href="" class="button_color-white button">Заказать</a>
                         </div>
                     </div>
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/adults-3.jpg"></div>
-                        <h3 class="diets_destination minisubtitle">Для взрослых собак </h3>
+                        <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
                         <div class="diets__compo">Баранина/Кролик</div>
                         <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
-                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
-                        <div class="diets_button">
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
                             <a href="" class="button_color-white button">Заказать</a>
                         </div>
                     </div>
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/puppets-4.jpg"></div>
-                        <h3 class="diets_destination minisubtitle">Для щенков </h3>
+                        <h3 class="diets__for minisubtitle">Для щенков </h3>
                         <div class="diets__compo">Баранина/Кролик</div>
                         <div class="diets__descrition text">Подходит для ежедневного кормления. Богат животными белками и Омега-3.</div>
-                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
-                        <div class="diets_button">
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
+                            <a href="" class="button_color-white button">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="diets__slider slider">
+                    <div class="diets__item slider__item">
+                        <div class="diets__image"><img src="assets/img/diets/adults-1.jpg"></div>
+                        <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
+                        <div class="diets__compo">Индейка/Говядина</div>
+                        <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
+                            <a href="" class="button_color-white button">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="diets__item slider__item">
+                        <div class="diets__image"><img src="assets/img/diets/puppets-2.jpg"></div>
+                        <h3 class="diets__for minisubtitle">Для щенков </h3>
+                        <div class="diets__compo">Индейка/Говядина</div>
+                        <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
+                            <a href="" class="button_color-white button">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="diets__item slider__item">
+                        <div class="diets__image"><img src="assets/img/diets/adults-3.jpg"></div>
+                        <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
+                        <div class="diets__compo">Баранина/Кролик</div>
+                        <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
+                            <a href="" class="button_color-white button">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="diets__item slider__item">
+                        <div class="diets__image"><img src="assets/img/diets/puppets-4.jpg"></div>
+                        <h3 class="diets__for minisubtitle">Для щенков </h3>
+                        <div class="diets__compo">Баранина/Кролик</div>
+                        <div class="diets__descrition text">Подходит для ежедневного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets__button">
                             <a href="" class="button_color-white button">Заказать</a>
                         </div>
                     </div>
