--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
                 <div class="diets__slider slider">
                     <div class="diets__item slider__item">
-                        <div class="diets__image"><img src="assets/img/diets/adults-1.jpg"></div>
+                        <div class="diets__image"><img data-lazy="assets/img/diets/adults-1.jpg"></div>
                         <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
                         <div class="diets__compo">Индейка/Говядина</div>
                         <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="diets__item slider__item">
-                        <div class="diets__image"><img src="assets/img/diets/puppets-2.jpg"></div>
+                        <div class="diets__image"><img data-lazy="assets/img/diets/puppets-2.jpg"></div>
                         <h3 class="diets__for minisubtitle">Для щенков </h3>
                         <div class="diets__compo">Индейка/Говядина</div>
                         <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="diets__item slider__item">
-                        <div class="diets__image"><img src="assets/img/diets/adults-3.jpg"></div>
+                        <div class="diets__image"><img data-lazy="assets/img/diets/adults-3.jpg"></div>
                         <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
                         <div class="diets__compo">Баранина/Кролик</div>
                         <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                     <div class="diets__item slider__item">
-                        <div class="diets__image"><img src="assets/img/diets/puppets-4.jpg"></div>
+                        <div class="diets__image"><img data-lazy="assets/img/diets/puppets-4.jpg"></div>
                         <h3 class="diets__for minisubtitle">Для щенков </h3>
                         <div class="diets__compo">Баранина/Кролик</div>
                         <div class="diets__descrition text">Подходит для ежедневного кормления. Богат животными белками и Омега-3.</div>
@@ -223,10 +223,10 @@
 
             <div class="diet-calc">
                 <div class="diet-calc__content">
-                    <div class="diet-compo__text">
+                    <div class="diet-calc__text">
                         <p>Рассчитаем в каком количестве нужно кормить вашего хвостика рационами Zooov</p>
                     </div>
-                    <div class="diet-compo__button">
+                    <div class="diet-calc__button">
                         <a href class="button button_color-red">Расчитать</a>
                     </div>
                 </div>
