added img to delivery section

--- a/index.html
+++ b/index.html
@@ -291,19 +291,19 @@
                 <h2 class="delivery__subtitle subtitle">Как получить ZOOOV?</h2>
                 <div class="delivery__items">
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/package.png"></div>
+                        <div class="delivery__image"><img src="assets/img/delivery/package.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
                         <div class="delivery__descrition text text_color-black">Выберите рацион для своей собаки. Если не знаете сколько
                             и какой – мы подскажем.</div>
                     </div>
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"></div>
+                        <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Подтвердите заказ</h3>
                         <div class="delivery__descrition text text_color-black">Мы свяжемся с вами для подтверждения заказа
                             и уточнения деталей.</div>
                     </div>
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/clock.png"></div>
+                        <div class="delivery__image"><img src="assets/img/delivery/clock.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Ожидайте доставки</h3>
                         <div class="delivery__descrition text text_color-black">Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.</div>
                     </div>
