--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <div class="delivery__image"><img src="assets/img/delivery/package.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
                         <div class="delivery__descrition text text_color-black">Выберите рацион для своей собаки. Если не знаете сколько
-                            и какой – мы подскажем.</div>
+                            и какой – <a class="cue" href="#">мы подскажем.</a></div>
                     </div>
                     <div class="delivery__item">
                         <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
@@ -373,10 +373,17 @@
                     </div>
                     <p class="contacts__insta text text_color-white">Подписывайтесь на наш Instagram и следите за новостями</p>
                 </div>
+                <div class="contacts__pictures_dog-meat">
+                    <div class="contacts__dog">
+                        <img src="assets/img/contacts/contacts-dog.png" alt="dog icon">
+                    </div>
+                    <div class="contacts__meat">
+                        <img src="assets/img/contacts/contacts-meat.png" alt="meat icon">
+                    </div>
+                </div>
                 <div class="contacts__form">
                     <h3 class="contacts__minisubtitle minisubtitle text_color-white">Остались вопросы?</h3>
                     <div class="text text_color-white">Напишите нам и мы обязательно подробно на них ответим.</div>
-
                     <form class="contacts__form__inputs" action="#" method="get">
                         <div class="inputs__name-mail">
                             <input class="inputs__name" type="text" name="name" value="" placeholder="Имя" tabindex="1" required/>
@@ -392,8 +399,13 @@
                             <button class="button button_color-peach" type="submit" tabindex="5">Отправить</button>
                         </div>
                     </form>
-
                 </div>
+                <!--
+                <div class="contacts__pictures_apple">
+                    <div class="contacts__apple">
+                        <img src="assets/img/contacts/contacts-apple.png" alt="apple icon">
+                    </div>
+                </div>-->
             </div>
         </main>
         <footer class="footer">
