--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="menu__list">
-                            <li><a href="#barf" class="menu__link">BARF!</a></li>
+                            <li><a href="#barf" class="menu__link">BARF</a></li>
                             <li><a href="#diets" class="menu__link">Рационы</a></li>
                             <li><a href="#why-zooov" class="menu__link">ZOOOV</a></li>
                             <li><a href="#about-zooov" class="menu__link">О нас</a></li>
@@ -289,19 +289,19 @@
                 <h2 class="delivery__subtitle subtitle">Как получить ZOOOV?</h2>
                 <div class="delivery__items">
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/package.png"></div>
+                        <div class="delivery__image"><img src="assets/img/delivery/package.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
                         <div class="delivery__descrition text text_color-black">Выберите рацион для своей собаки. Если не знаете сколько
                             и какой – мы подскажем.</div>
                     </div>
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"></div>
+                        <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Подтвердите заказ</h3>
                         <div class="delivery__descrition text text_color-black">Мы свяжемся с вами для подтверждения заказа
                             и уточнения деталей.</div>
                     </div>
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/clock.png"></div>
+                        <div class="delivery__image"><img src="assets/img/delivery/clock.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Ожидайте доставки</h3>
                         <div class="delivery__descrition text text_color-black">Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.</div>
                     </div>
@@ -363,14 +363,18 @@
                     <h2 class="contacts__subtitle subtitle text_color-white">Контакты</h2>
                     <p class="contacts__text text text_color-white">Вы всегда можете с нами связаться по телефону или в мессенджерах</p>
                     <div class="contacts__phone">+7 (900)000-00-00</div>
-                    <div>
-                        <a href class="button button_color-pink">Написать в WhatsApp</a>
+                    <div class="contacts__button">
+                        <a href class="button button_color-pink"><img class="contacts__logo" src="assets/img/contacts/whatsapp-logo.svg"> Написать в WhatsApp</a>
                     </div>
-                    <div>
-                        <a href class="button button_color-pink">Написать в Telegram</a>
+                    <div class="contacts__button">
+                        <a href class="button button_color-pink"><img class="contacts__logo" src="assets/img/contacts/telegram-logo.svg"> Написать в Telegram</a>
                     </div>
                     <p class="contacts__insta text text_color-white">Подписывайтесь на наш Instagram и следите за новостями</p>
                 </div>
+                <div>
+
+                </div>
+
                 <div class="contacts__form">
                     <h3 class="contacts__minisubtitle minisubtitle text_color-white">Остались вопросы?</h3>
                     <div class="text text_color-white">Напишите нам и мы обязательно подробно на них ответим.</div>
