--- a/index.html
+++ b/index.html
@@ -371,10 +371,6 @@
                     </div>
                     <p class="contacts__insta text text_color-white">Подписывайтесь на наш Instagram и следите за новостями</p>
                 </div>
-                <div>
-
-                </div>
-
                 <div class="contacts__form">
                     <h3 class="contacts__minisubtitle minisubtitle text_color-white">Остались вопросы?</h3>
                     <div class="text text_color-white">Напишите нам и мы обязательно подробно на них ответим.</div>
@@ -391,10 +387,9 @@
                             <div class="contact-form__privacy text_color-white">
                                 <input type="checkbox" name="privacy" value="OK" tabindex="4" required/><p> Даю согласие на обработку персональных данных</p>
                             </div>
-                            <button class="button button_color-peach" type="submit" tabindex="5">Отправить</button>
+                            <button class="contact-form__button button button_color-peach" type="submit" tabindex="5">Отправить</button>
                         </div>
                     </form>
-
                 </div>
             </div>
         </main>
