updated contacts section

--- a/index.html
+++ b/index.html
@@ -371,6 +371,14 @@
                     </div>
                     <p class="contacts__insta text text_color-white">Подписывайтесь на наш Instagram и следите за новостями</p>
                 </div>
+                <div class="contacts__dog-meat">
+                    <div class="dog-icon">
+                        <img  src="assets/img/contacts/contacts-dog.png">
+                    </div>
+                    <div class="meat-icon">
+                        <img class="meat-icon" src="assets/img/contacts/contacts-meat.png">
+                    </div>
+                </div>
                 <div class="contacts__form">
                     <h3 class="contacts__minisubtitle minisubtitle text_color-white">Остались вопросы?</h3>
                     <div class="text text_color-white">Напишите нам и мы обязательно подробно на них ответим.</div>
