about-zooov mobile fix

--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
                             <p>ZOOOV — это удобно, мы доставляем готовый рацион на две недели уже смешанным, расфасованным и упакованным в порционные лотки,готовыми к заморозке. За два часа до кормления достаточно переместить контейнер из морозилки в холодильник для ПРАВИЛЬНОЙ разморозки.</p>
                         </div>
                     </div>
+                    <div class="about-zooov__mobile-gallery">
+                        <img src="assets/img/about-us/about-us-mobile.png" alt="dogs with meal">
+                    </div>
             </div>
 
             <div class="delivery" id="delivery">
@@ -382,7 +385,6 @@
                 <div class="contacts__form">
                     <h3 class="contacts__minisubtitle minisubtitle text_color-white">Остались вопросы?</h3>
                     <div class="text text_color-white">Напишите нам и мы обязательно подробно на них ответим.</div>
-
                     <form class="contacts__form__inputs" action="#" method="get">
                         <div class="inputs__name-mail">
                             <input class="inputs__name" type="text" name="name" value="" placeholder="   Имя" tabindex="1" required/>
