chaecked and corrected adaptive for all sections

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <div class="delivery__image"><img src="assets/img/delivery/package.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
                         <div class="delivery__descrition text text_color-black">Выберите рацион для своей собаки. Если не знаете сколько
-                            и какой – мы подскажем.</div>
+                            и какой – <a class=cue href="#">мы подскажем.</a></div>
                     </div>
                     <div class="delivery__item">
                         <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
@@ -365,14 +365,14 @@
                 <div class="contacts__how-to">
                     <h2 class="contacts__subtitle subtitle text_color-white">Контакты</h2>
                     <p class="contacts__text text text_color-white">Вы всегда можете с нами связаться по телефону или в мессенджерах</p>
-                    <div class="contacts__phone">+7 (900)000-00-00</div>
+                    <div class="contacts__phone"><a href="tel:79000000000" target="_blank">+7 (900)000-00-00</a></div>
                     <div class="contacts__button">
-                        <a href class="button button_color-pink"><img class="contacts__logo" src="assets/img/contacts/whatsapp-logo.svg"> Написать в WhatsApp</a>
+                        <a href="https://wapp.click/79000000000" target="_blank" class="button button_color-pink"><img class="contacts__logo" src="assets/img/contacts/whatsapp-logo.svg"> Написать в WhatsApp</a>
                     </div>
                     <div class="contacts__button">
-                        <a href class="button button_color-pink"><img class="contacts__logo" src="assets/img/contacts/telegram-logo.svg"> Написать в Telegram</a>
+                        <a href="https://t.me/zooov_ru" target="_blank" class="button button_color-pink"><img class="contacts__logo" src="assets/img/contacts/telegram-logo.svg"> Написать в Telegram</a>
                     </div>
-                    <p class="contacts__insta text text_color-white">Подписывайтесь на наш Instagram и следите за новостями</p>
+                    <p class="contacts__insta text text_color-white">Подписывайтесь на наш <a href="https://www.instagram.com/zooov.ru/" target="_blank">Instagram</a> и следите за новостями</p>
                 </div>
                 <div class="contacts__dog-meat">
                     <div class="dog-icon">
