--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="diet-compo__slider slider">
+
+                <div class="diet-compo__slider slider"> <!--only for mobiles-->
                     <div class="diet-compo__adult-dogs diet-compo__section slider__item">
                         <h3 class="diet-compo__minisubtitle minisubtitle">Для взрослых</h3>
                         <ul class="diet-compo__list_left">
@@ -131,7 +132,7 @@
                 </div>
             </div>
 
-            <div class="diets" id="diets">
+            <div class="diets">
                 <h2 class="diets__subtitle subtitle">Рационы ZOOOV</h2>
                 <div class="diets__text text text_color-black">Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
                     по составу рационы ZOOOV. Вы сможете заказать полноценное питание исходя из возраста, веса и даже вкусовых предпочтений вашего друга. ZOOOV  заботится о каждой собаке.</div>
@@ -177,7 +178,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="diets__slider slider">
+
+                <div class="diets__slider slider"><!--only for mobiles-->
                     <div class="diets__item slider__item">
                         <div class="diets__image"><img data-lazy="assets/img/diets/adults-1.jpg"></div>
                         <h3 class="diets__for minisubtitle">Для взрослых собак </h3>
@@ -232,7 +234,7 @@
                 </div>
             </div>
 
-            <div class="why-zooov" id="why-zooov">
+            <div class="why-zooov">
                 <h2 class="why-zooov__subtitle subtitle">Почему ZOOOV</h2>
                 <div class="why-zooov__items">
                     <div class="why-zooov__item">
@@ -283,7 +285,7 @@
                             <p>ZOOOV — это удобно, мы доставляем готовый рацион на две недели уже смешанным, расфасованным и упакованным в порционные лотки,готовыми к заморозке. За два часа до кормления достаточно переместить контейнер из морозилки в холодильник для ПРАВИЛЬНОЙ разморозки.</p>
                         </div>
                     </div>
-                    <div class="about-zooov__mobile-gallery">
+                    <div class="about-zooov__gallery_mobile"><!--only for mobiles-->
                         <img src="assets/img/about-us/about-us-mobile.png" alt="dogs with meal">
                     </div>
             </div>
@@ -295,7 +297,7 @@
                         <div class="delivery__image"><img src="assets/img/delivery/package.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
                         <div class="delivery__descrition text text_color-black">Выберите рацион для своей собаки. Если не знаете сколько
-                            и какой – <a class=cue href="#">мы подскажем.</a></div>
+                            и какой – <a class=delivery__cue href="#">мы подскажем.</a></div>
                     </div>
                     <div class="delivery__item">
                         <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"><img class="delivery__arrow" src="assets/img/delivery/deliveryarrow.png"></div>
