--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <div class="delivery__descrition text text_color-black">Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.</div>
                     </div>
                     <div class="delivery__item">
-                        <div class="delivery__image image__heart"><img src="assets/img/delivery/heart.png"></div>
+                        <div class="delivery__image image-heart"><img src="assets/img/delivery/heart.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Радуйте своего питомца</h3>
                         <div class="delivery__descrition text text_color-black">Просто разморозьте рацион: при комнатной температуре – 3 часа, в холодильнике – 12-15 часов.</div>
                     </div>
