--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               </p>
             </div>
             <div class="diet-calc__button">
-              <a href class="button button_color-red">Расчитать</a>
+              <a href class="button button_color-red">Рассчитать</a>
             </div>
           </div>
         </div>
