--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="assets/img/logos/logo16.png"
       type="img/png"
     />
-    <title>Zooov</title>
+    <title>Pet Food Shop</title>
   </head>
   <body>
     <div class="wrapper">
@@ -27,7 +27,7 @@
             <img
               class="header__img"
               src="assets/img/logos/logo80.png"
-              alt="Zooov company logo"
+              alt="Company logo"
             />
           </a>
           <div class="header__burger">
