--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
               <li><a href="#contacts" class="menu__link">Контакты</a></li>
             </ul>
             <div class="header__button">
-              <a href class="button button_color-red">Выбрать рацион</a>
+              <a href="#diets" class="button button_color-red"
+                >Выбрать рацион</a
+              >
             </div>
           </nav>
         </div>
@@ -159,7 +161,7 @@
           </div>
         </div>
 
-        <div class="diets">
+        <div class="diets" id="diets">
           <h2 class="diets__subtitle subtitle">Рационы ZOOOV</h2>
           <div class="diets__text text text_color-black">
             Система питания взрослой собаки не подойдет для щенка, поэтому мы
@@ -309,7 +311,7 @@
           </div>
         </div>
 
-        <div class="why-zooov">
+        <div class="why-zooov" id="why-zooov">
           <h2 class="why-zooov__subtitle subtitle">Почему ZOOOV</h2>
           <div class="why-zooov__items">
             <div class="why-zooov__item">
@@ -377,7 +379,7 @@
               />
             </div>
           </div>
-          <div class="about-zooov__description">
+          <div class="about-zooov__description" id="about-zooov">
             <h2 class="about-zooov__subtitle subtitle">
               С заботой и любовью от Zooov
             </h2>
